--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
     "php": ">=7.1",
     "fabpot/goutte": "^3.2",
     "psr/log": "^1.0",
-    "illuminate/database": "^5.8",
-    "illuminate/events": "^5.8",
+    "illuminate/database": "^5.8 || ^6.0",
+    "illuminate/events": "^5.8 || ^6.0",
     "ext-dom": "*"
   },
   "require-dev": {
