--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ matrix:
     env: STATIC_ANALYSIS=true VALIDATE_CODING_STYLE=true
   - php: 7.3
     env: STATIC_ANALYSIS=true VALIDATE_CODING_STYLE=true
+  - php: 7.4
+    env: STATIC_ANALYSIS=true VALIDATE_CODING_STYLE=true
   - php: master
     env: STATIC_ANALYSIS=true VALIDATE_CODING_STYLE=false
   allow_failures:
